testdata/baselines/reference/compiler/jsxUnicodeEscapeSequence.errors.txt
jsxUnicodeEscapeSequence(2,46): error TS1128: Declaration or statement expected.
jsxUnicodeEscapeSequence(3,31): error TS1003: Identifier expected.
jsxUnicodeEscapeSequence(3,33): error TS1128: Declaration or statement expected.
jsxUnicodeEscapeSequence(3,33): error TS1005: ',' expected.
jsxUnicodeEscapeSequence(3,33): error TS1128: Declaration or statement expected.
jsxUnicodeEscapeSequence(3,33): error TS1005: ';' expected.

==== jsxUnicodeEscapeSequence (6 errors) ====
    
    // Test for unicode escape sequence issue in JSX
                                                 ~~~~
!!! error TS1128: Declaration or statement expected.
    // The warning symbol (⚠, U+26A0) should be correctly encoded as \u26A0, not \uFFFD
                                  ~
!!! error TS1003: Identifier expected.
                                    ~~
!!! error TS1128: Declaration or statement expected.
                                    ~~
!!! error TS1005: ',' expected.
                                    ~~
!!! error TS1128: Declaration or statement expected.
                                    ~~
!!! error TS1005: ';' expected.
    
jsxUnicodeEscapeSequence.tsx(4,1): error TS1128: Declaration or statement expected.
jsxUnicodeEscapeSequence.tsx(4,35): error TS1003: Identifier expected.
jsxUnicodeEscapeSequence.tsx(4,37): error TS1128: Declaration or statement expected.
jsxUnicodeEscapeSequence.tsx(4,37): error TS1005: ',' expected.
jsxUnicodeEscapeSequence.tsx(4,37): error TS1128: Declaration or statement expected.
jsxUnicodeEscapeSequence.tsx(4,37): error TS1005: ';' expected.

==== jsxUnicodeEscapeSequence.tsx (6 errors) ====
    
    /// <reference path="/.lib/react16.d.ts" />
    
    export const InlineUnicodeChar = () => {
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                      ~
!!! error TS1003: Identifier expected.
                                        ~~
!!! error TS1128: Declaration or statement expected.
                                        ~~
!!! error TS1005: ',' expected.
                                        ~~
!!! error TS1128: Declaration or statement expected.
                                        ~~
!!! error TS1005: ';' expected.
        // This should work correctly - inline character with other content
        return <div><span>Warning: ⚠ Error</span></div>;
    };
    
    export const StandaloneUnicodeChar = () => {
        // This should reproduce the issue - unicode character on its own line
        return (<div><span>⚠</span>
            ⚠
        </div>);
    };
    
    export const MultipleUnicodeChars = () => {
        // Test multiple unicode characters
        return (<div>
            ⚠
            ⛔
            🚨
        </div>);
    };
    
